// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot of add a breeder account 1`] = `
<div>
  <button
    className="btn btn-info"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Add breeder account
  </button>
</div>
`;

exports[`matches snapshot of add a potential parent account 1`] = `
<div>
  <button
    className="btn btn-info"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Add a potential parent account
  </button>
</div>
`;

exports[`matches snapshot of add an admin account 1`] = `
<div>
  <button
    className="btn btn-info"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Add an admin account
  </button>
</div>
`;
